k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: armies-docs
  namespace: websites
  labels:
    app: armies-docs
spec:
  selector:
    app: armies-docs
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
