k8s/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: armies-docs-http
  namespace: websites
  labels:
    app: armies-docs
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`armies.petersimmons.com`)
      middlewares:
        - name: https-redirect
          namespace: websites
      services:
        - name: armies-docs
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: armies-docs-https
  namespace: websites
  labels:
    app: armies-docs
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`armies.petersimmons.com`)
      services:
        - name: armies-docs
          port: 8080
  tls:
    secretName: petersimmons-tls
